--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "1.11.0",
     "@pinia/nuxt": "^0.11.2",
     "@rive-app/canvas": "^2.31.6",
+    "@types/node": "^24.7.0",
     "@vueuse/core": "^13.9.0",
     "lucide-vue-next": "^0.545.0",
     "nuxt": "^4.1.3",
